--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -1,1 +1,23 @@
-<h2>Home</h2>
+<div class="mt-4">
+  <div class="row">
+
+    {{#each courses}}
+      <div class="col-sm-6 col-lg-4">
+        <div class="card card-course-item" style="width: 18rem;">
+          <a href="/courses/{{this.slug}}"><img
+              class="card-img-top"
+              src="{{this.image}}"
+              alt="Card image cap"
+            /></a>
+
+          <div class="card-body">
+            <h5 class="card-title">{{this.name}}</h5>
+            <p class="card-text">{{this.description}}</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+      </div>
+    {{/each}}
+
+  </div>
+</div>
