--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -24,6 +24,9 @@
        <li class="nav-item">
         <a class="nav-link" href="Search">Search</a>
       </li>
+        <li class="nav-item">
+        <a class="nav-link" href="courses/create">Create</a>
+      </li>
     
   </div>
 </nav>
