--- a/src/resources/views/courses/create.hbs
+++ b/src/resources/views/courses/create.hbs
@@ -1,22 +1,17 @@
 <div class="mt-4">
   <h3>Create</h3>
-  <form method="post" action="store">
+  <form method="post" action="/courses/store">
     <div class="form-group">
       <label for="name">Tên</label>
       <input type="text" class="form-control" id="name" name="name" />
     </div>
     <div class="form-group">
       <label for="description">Mô tả</label>
-      <input
-        type="text"
-        class="form-control"
-        id="description"
-        name="description"
-      />
+      <input type="text" class="form-control" id="description" name="description" />
     </div>
     <div class="form-group">
-      <label for="videoid">Video Id</label>
-      <input type="text" class="form-control" id="videoid" name="videoid" />
+      <label for="videoid">image</label>
+      <input type="text" class="form-control" id="image" name="image" />
     </div>
 
     <button type="submit" class="btn btn-primary">Thêm</button>
