--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -1,14 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Node</a>
-  <button
-    class="navbar-toggler"
-    type="button"
-    data-toggle="collapse"
-    data-target="#navbarSupportedContent"
-    aria-controls="navbarSupportedContent"
-    aria-expanded="false"
-    aria-label="Toggle navigation"
-  >
+  <a class="navbar-brand" href="/">Node</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
@@ -19,14 +12,17 @@
           <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="News">News</a>
+        <a class="nav-link" href="/news">News</a>
       </li>
-       <li class="nav-item">
-        <a class="nav-link" href="Search">Search</a>
+      <li class="nav-item">
+        <a class="nav-link" href="/search">Search</a>
       </li>
-        <li class="nav-item">
-        <a class="nav-link" href="courses/create">Create</a>
+      <li class="nav-item">
+        <a class="nav-link" href="/courses/create">Create</a>
       </li>
-    
+      <li class="nav-item">
+        <a class="nav-link" href="/courses/table">Table</a>
+      </li>
+
   </div>
 </nav>
