--- a/src/resources/views/courses/table.hbs
+++ b/src/resources/views/courses/table.hbs
@@ -19,10 +19,57 @@
                 <td>
                     <a href="/courses/{{this._id}}/update" class="btn btn-primary" role="button"
                         aria-pressed="true">Update</a>
-                    <a href="#" class="btn btn-danger" role="button" aria-pressed="true">Del</a>
+                    <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal"
+                        data-id="{{this._id}}">Del</button>
                 </td>
             </tr>
             {{/each}}
         </tbody>
     </table>
 </div>
+
+
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Modal title</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Modal body text goes here.</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-danger" id="btnDel">Xóa</button>
+            </div>
+        </div>
+
+    </div>
+</div>
+
+<form name="FormDel" method="post"></form>
+
+
+
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        var courseId
+        var btnDel = document.getElementById('btnDel');
+        var deleteForm = document.forms['FormDel'];
+
+        $('#exampleModal').on('show.bs.modal', function (event) {
+            var button = $(event.relatedTarget);
+            courseId = button.data('id');
+        })
+
+        btnDel.onclick = function () {
+            deleteForm.action = "/courses/" + courseId + "?_method=DELETE"
+            deleteForm.submit();
+        }
+    })
+
+</script>
