--- a/src/resources/views/courses/table.hbs
+++ b/src/resources/views/courses/table.hbs
@@ -1,13 +1,31 @@
-<div class="mt-4">
-
+<form name="containerForm" method="post" class="mt-4" action="/courses/handle-form" required>
     <div>
         <h3>Bảng</h3>
-        <a href="/courses/trash" class="btn btn-primary" role="button" aria-pressed="true">Trash</a>
+
+        <a href="/courses/trash" class="btn btn-primary" role="button" aria-pressed="true">Trash ( {{count}} )</a>
+
+        <div class="mt-4 d-flex align-items-center">
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" id="checkbox-all">
+                <label class="form-check-label" for="checkbox-all">
+                    Chọn tất cả
+                </label>
+            </div>
+
+            <select class="form-control" name="action" style="width: 210px; margin: 10px;">
+                <option value="">---chọn hành động ---</option>
+                <option value="delete">Xóa</option>
+            </select>
+
+
+            <button type="submit" class="btn btn-lg btn-primary btn-sm btn-submit-checkall" disabled>Thực hiện</button>
+        </div>
     </div>
 
-    <table class="table">
+    <table class="table" style="margin-top: 30px;">
         <thead>
             <tr>
+                <th scope="col">#</th>
                 <th scope="col">id</th>
                 <th scope="col">Tên</th>
                 <th scope="col">mô tả</th>
@@ -18,6 +36,11 @@
         <tbody>
             {{#each courses }}
             <tr>
+                <th>
+                    <div class="form-check">
+                        <input class="form-check-input" name="coursesId[]" type="checkbox" value="{{this._id}}">
+                    </div>
+                </th>
                 <th scope="row">{{sum @index 1}}</th>
                 <td>{{this.name}}</td>
                 <td>{{this.description}}</td>
@@ -36,7 +59,7 @@
             {{/each}}
         </tbody>
     </table>
-</div>
+</form>
 
 
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
@@ -70,6 +93,11 @@
         var courseId
         var btnDel = document.getElementById('btnDel');
         var deleteForm = document.forms['FormDel'];
+        var checkboxAll = $("#checkbox-all")
+        var courseItemCheckBox = $('input[name="coursesId[]"]')
+        var containerForm = $('form[name="containerForm"]')
+        var checkAllBtn = $(".btn-submit-checkall")
+
 
         $('#exampleModal').on('show.bs.modal', function (event) {
             var button = $(event.relatedTarget);
@@ -80,6 +108,36 @@
             deleteForm.action = "/courses/" + courseId + "?_method=DELETE"
             deleteForm.submit();
         }
+        checkboxAll.change(function () {
+            var isChecked = $(this).prop('checked')
+            courseItemCheckBox.prop('checked', isChecked)
+            renderCheckAllSubmitBtn()
+        })
+
+        courseItemCheckBox.change(function () {
+            var isCheckedAll = courseItemCheckBox.length === $('input[name="coursesId[]"]:checked').length
+            checkboxAll.prop('checked', isCheckedAll)
+            renderCheckAllSubmitBtn()
+        })
+
+        checkAllBtn.click(function (e) {
+            e.preventDefault()
+            var isSubmitable = !$(this).hasClass('disabled')
+            if (isSubmitable) {
+                containerForm.submit()
+            }
+        })
+
+        function renderCheckAllSubmitBtn() {
+
+            var count = $('input[name="coursesId[]"]:checked').length
+            if (count > 0) {
+                checkAllBtn.attr('disabled', false)
+            } else {
+                checkAllBtn.attr("disabled", true);
+            }
+        }
+
     })
 
 </script>
