--- a/src/resources/views/courses/table.hbs
+++ b/src/resources/views/courses/table.hbs
@@ -27,8 +27,10 @@
             <tr>
                 <th scope="col">#</th>
                 <th scope="col">id</th>
-                <th scope="col">Tên</th>
-                <th scope="col">mô tả</th>
+                <th scope="col">Tên
+                    {{{sortable 'name' _sort}}}
+                </th>
+                <th scope="col">mô tả {{{sortable 'description' _sort}}}</th>
                 <th scope="col">thời gian tạo</th>
                 <th scope="col">Action</th>
             </tr>
